# CSE4310-Detecting_Motion

./: .gitattributes  .gitignore  LICENSE  README.md  notes.txt  pyproject.toml
.devcontainer/: devcontainer.json
detecting_motion/: __init__.py  motion_detection.py  motion_tracker_gui.py  qtdemo.py
detecting_motion/ffmpeg_essentials_build/doc/: ffplay-all.html  ffprobe-all.html
detecting_motion/tools/: custom_log.py  motion_util.py
ffmpeg_essentials_build/: README.txt
ffmpeg_essentials_build/doc/: ffmpeg-all.html
